# smart-trip

./: .gitignore  README.md
.opencode/skills/: milestone-developer.md
backend/: pyproject.toml
backend/smart_trip/: main.py
backend/smart_trip/api/routes/: games.py  health.py
backend/smart_trip/api/websocket/: handler.py  manager.py  messages.py
backend/smart_trip/config/: settings.py
backend/smart_trip/engine/: game.py
backend/smart_trip/engine/models/: __init__.py  player.py  question.py  room.py  round.py
backend/smart_trip/engine/ports/: question_repository.py  room_repository.py
backend/smart_trip/engine/services/: question_service.py  round_service.py
backend/smart_trip/repositories/memory/: question_repo.py  room_repo.py
backend/smart_trip/services/: seed.py
backend/tests/: test_health.py
backend/tests/integration/: test_api.py  test_websocket.py
backend/tests/unit/: test_game.py  test_question_service.py  test_round_service.py
docs/: okf-spec.md
docs/charter/: architecture.md  business-rules.md  design-and-navigation.md  dev-conventions.md  index.md  milestones.md  modules.md  roles-and-rbac.md  tech-stack.md  testing-strategy.md  ux-ui.md
docs/e2e/videos/: poc-alice.webm  poc-bob.webm  poc-full-game-flow.webm  scaffold-welcome-page.webm  uxui-poc-alice.webm  (+3 more)
docs/state/: api-endpoints.md  development-status.md  index.md  quickstart.md  seeding-and-test-data.md  test-plans.md
frontend/: package.json  playwright.config.ts  pnpm-lock.yaml
frontend/e2e/: poc.spec.ts  scaffold.spec.ts  uxui-poc.spec.ts
scripts/: run-e2e.sh
(+8 files in other folders)
